# tweet-brain

./: .gitignore  LICENSE  MASTER.md  README.md
.cursor/rules/: global.mdc
backend/: .env.example  default_groups.yaml  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: groups.py  posts.py  settings.py  workflows.py
backend/app/models/: schemas.py
backend/app/services/: credentials.py  llm.py  pipeline.py  twitter.py  yaml_store.py
backend/tests/: test_groups.py  test_pipeline.py  test_settings.py  test_yaml_store.py
frontend/: nuxt.config.ts  package.json
frontend/app/: app.config.ts  app.vue
frontend/app/assets/: main.css
frontend/app/components/: AppHeader.vue  GroupCard.vue  MarkdownContent.vue  PostFeed.vue  RunHistoryList.vue  WorkflowRunPanel.vue
frontend/app/composables/: useTweetBrainApi.ts
frontend/app/layouts/: default.vue
frontend/app/pages/: groups.vue  index.vue  settings.vue
frontend/app/types/: index.ts
frontend/app/utils/: formatPostText.ts
