[project]
name = "tweet-brain-backend"
version = "0.1.0"
description = "Backend for Tweet Brain — X account tracking and Grok LLM workflows"
readme = "README.md"
authors = [
    { name = "Saquib Alam", email = "saquib764@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "httpx",
    "openai>=2.38.0",
    "xdk",
    "pyyaml",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.12.2",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
